--- a/frontend/src/components/knowledge/knowledgeBase/KnowledgeBase.module.css
+++ b/frontend/src/components/knowledge/knowledgeBase/KnowledgeBase.module.css
@@ -2,8 +2,9 @@
   max-width: 20rem;
   width: 100%;
   height: 100%;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border-right: 1px solid rgba(0, 0, 0, 0.10);
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
   flex-shrink: 0;
 }
