--- a/frontend/src/components/knowledge/knowledgeList/KnowledgeList.module.css
+++ b/frontend/src/components/knowledge/knowledgeList/KnowledgeList.module.css
@@ -1,4 +1,5 @@
 .knowledgeList{
     height: 100%;
     border: 2px solid purple;
+    width: 100%;
 }
