--- a/frontend/src/pages/home/Home.module.css
+++ b/frontend/src/pages/home/Home.module.css
@@ -1,7 +1,7 @@
 .home {
-    border: 2px solid pink;
-    height: 100%;
-    display: flex;
-align-items: flex-start;
-
+  border: 2px solid pink;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
