--- a/frontend/src/ux/layout/Layout.module.css
+++ b/frontend/src/ux/layout/Layout.module.css
@@ -1,4 +1,6 @@
-.layout{
-    border: 5px solid yellow;
-    height: 100%;
+.layout {
+  border: 5px solid yellow;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
